Updated bookingController and swagger document
