# models/Booking.js
@@ -1,3 +1,4 @@
+
 module.exports = (sequelize, Sequelize, Customer, Service, Barber) => {
     const Booking = sequelize.define("booking", {
         id_booking: {
@@ -14,33 +15,33 @@ module.exports = (sequelize, Sequelize, Customer, Service, Barber) => {
             allowNull: false
         },
         id_customer: {
-            type: Sequelize.INTEGER,
-            references: {
-                model: Customer,
-                key: "id_customer"
-            }
+            type: Sequelize.DataTypes.INTEGER,
+            allowNull: false
         },
         id_service: {
-            type: Sequelize.INTEGER,
-            references: {
-                model: Service,
-                key: "id_service"
-            }
+            type: Sequelize.DataTypes.INTEGER,
+            allowNull: false
         },
         id_barber: {
-            type: Sequelize.INTEGER,
-            references: {
-                model: Barber,
-                key: "id_barber"
-            }     
+            type: Sequelize.DataTypes.INTEGER,
+            allowNull: false
         }
-
     })
 
-    Booking.belongsTo(Customer, { foreignKey: 'id_customer', as: 'Customer' });
-    Booking.belongsTo(Service, { foreignKey: 'id_service', as: 'Service' }); 
-    Booking.belongsTo(Barber, { foreignKey: 'id_barber', as: 'Barber' });
-        
+
+    /*Customer.hasOne(Booking);
+    Booking.belongsTo(Customer);
+    
+    /*Service.hasOne(Booking);
+    Booking.belongsTo(Service);
+    
+    /*Barber.hasOne(Booking);
+    Booking.belongsTo(Barber);*/
+   
+    Booking.belongsTo(Customer, { foreignKey: 'id_customer', as: 'firstName' });
+    Booking.belongsTo(Service, { foreignKey: 'id_service', as: 'serviceName' }); 
+    Booking.belongsTo(Barber, { foreignKey: 'id_barber', as: 'barberName' });
+      
      return Booking
 
 }
@@ -121,39 +122,4 @@ module.exports = (sequelize, Sequelize, Customer, Service, Barber) => {
     Service.hasOne(Booking);
 
      return Booking
-}
-
-// моя версия
-module.exports = (sequelize, Sequelize) => {
-    const Booking = sequelize.define("booking", {
-        id_booking: {
-            type: Sequelize.INTEGER,
-            primaryKey: true,
-            autoIncrement: true
-        },
-        bookingTime: {
-            type: Sequelize.DATE,
-            allowNull: false
-        },
-        id_customer: {
-            type: Sequelize.INTEGER,
-            allowNull: false
-        },
-        id_service: {
-            type: Sequelize.INTEGER,
-            allowNull: false
-        },
-        id_barber: {
-            type: Sequelize.INTEGER,
-            allowNull: false
-        }   
-    });
-  
-    Booking.belongsTo(Customer, { foreignKey: 'id_customer', as: 'firstName' });
-    Booking.belongsTo(Service, { foreignKey: 'id_service', as: 'serviceName' }); 
-    Booking.belongsTo(Barber, { foreignKey: 'id_barber', as: 'barberName' });
-
-    return Booking;
 }*/
-  
-  
